@@ -10,6 +10,9 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.24_02-dev
 
+Apache::Server->loglevel can now be modified
+[Geoffrey Young <gyoung@laserlink.net>]
+
 use unsigned short rather than short for Apache::Server->port
 thanks to Richard L. Goerwitz for the spot
 
